# fast-api-practice

./: README.md  pyproject.toml
src/: alembic.ini  main.py
src/api/: todo.py
src/database/: connection.py  orm.py  repository.py
src/migrations/: env.py
src/migrations/versions/: d4e08d525381_first_alembic.py
src/schema/: request.py  response.py
src/tests/: conftest.py  test_main.py
